Add stream-card for yandex stream

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<div class="container-xl">
-  <div>
+<div class="container-xxl">
+  <div class="p-2">
     <header></header>
   </div>
-  <router-outlet></router-outlet>
+<!--  <router-outlet></router-outlet>-->
+
+  <stream-card [name]="'yandex-stream-29'"  [mimes]="['JPEG', 'MP4', 'PNG']" status="CREATED"></stream-card>
+
 </div>
