--- a/src/app/blocks/stream-card/stream-card.component.html
+++ b/src/app/blocks/stream-card/stream-card.component.html
@@ -1,8 +1,19 @@
 <div class="stream-card row">
-  <div class="col-xl-11 col-md-12 col-sm-12">
-    {{name}} {{mimes}}
+  <div class="col-xl-2 col-md-12 col-sm-12 d-flex justify-content-xl-start
+  justify-content-md-center
+  align-items-center">
+    {{name}}
   </div>
-  <div class="col-xl-1 col-md-12 col-sm-12" style="text-align: end">
-    Выполняется
+  <div class="col-xl-7 col-md-12 col-sm-12 d-flex flex-wrap justify-content-xl-start
+  justify-content-md-center align-items-center mime-type-card-container">
+    <ng-template let-mimeType ngFor [ngForOf]="mimes">
+      <mime-type-card [name]="mimeType"></mime-type-card>
+    </ng-template>
+  </div>
+  <div class="col-xl-2 d-flex justify-content-xl-end justify-content-md-center align-items-center">
+    {{date | date:'HH:ss d.MM.y'}}
+  </div>
+  <div class="col-xl-1 col-md-12 col-sm-12 d-flex justify-content-xl-end justify-content-md-center align-items-center">
+    {{_status}}
   </div>
 </div>
