Change design for stream-card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container-xxl">
-  <div class="p-2">
+  <div class="pt-2">
     <header></header>
   </div>
 <!--  <router-outlet></router-outlet>-->
 
-  <stream-card [name]="'yandex-stream-29'"  [mimes]="['JPEG', 'MP4', 'PNG']" status="CREATED"></stream-card>
+  <stream-container [streams]="streams"></stream-container>
 
 </div>
