--- a/src/app/blocks/mime-type-card/mime-type-card.component.scss
+++ b/src/app/blocks/mime-type-card/mime-type-card.component.scss
@@ -1,14 +1,17 @@
 .mime-type-card {
-  height: 20px;
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
-  width: max-content;
-  padding: 5px 10px;
+  width: 50px;
+  padding: 5px 15px;
 
   cursor: pointer;
 
   color: rgba(0, 0, 0, 0.75);
   border: 1px solid rgba(0, 0, 0, 0.1);
+
+  &:hover {
+    border: 1px solid rgba(255, 0, 0, 0.7);
+  }
 }
