--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,6 @@
   <div class="pt-2">
     <header></header>
   </div>
-<!--  <router-outlet></router-outlet>-->
-
-  <stream-container [streams]="streams"></stream-container>
+  <router-outlet></router-outlet>
 
 </div>
