--- a/src/app/blocks/mime-type-card/mime-type-card.component.scss
+++ b/src/app/blocks/mime-type-card/mime-type-card.component.scss
@@ -10,6 +10,7 @@
 
   color: rgba(0, 0, 0, 0.75);
   border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
 
   &:hover {
     border: 1px solid rgba(255, 0, 0, 0.7);
