--- a/src/app/blocks/stream-form/stream-form.component.scss
+++ b/src/app/blocks/stream-form/stream-form.component.scss
@@ -1,9 +1,11 @@
 .stream-form {
-
-  border: 1px solid rgba(0, 0, 0, 0.13);
-  border-radius: 10px;
-
   padding: 15px;
+
+  &_paragraph-title {
+    margin: 15px 0 15px 0;
+    color: rgba(193, 192, 192, 0.77);
+    font-size: 12px;
+  }
 
   &_mimes {
     margin-bottom: 20px;
